<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="direccionServidor">84.126.170.226</string>
    
    <string name="app_name">OpenGis</string>
    <string name="user">User</string>
    <string name="passwd">Pass</string>
    <string name="login">Login</string>
    <string name="delete">Delete</string>
    <string name="Tools">Tools</string>
    <string name="Products">Products</string>
    <string name="MisDatos">My Details</string>
    <string name="Userdata">Detail User:</string>
    <string name="iduser">DNI:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="choosework">Select a task:</string>
    <string name="start">Start</string>
    <string name="config">Configuration</string>
    <string name="email">eMail:</string>
    <string name="tituloMisDatos">Configuration - My Details</string>
    <string name="telefono">Phone:</string>
    <string name="guardar">Save</string>
    <string name="modificar">Modify</string>
    <string name="incorrectuser">User or Password incorrect</string>
    <string name="msgError">Error</string>
    <string name="errorInQuery">Fail in query</string>
    <string name="nameInvalid">Invalid Name</string>
    <string name="msgModifyOK">Your personal details have been changed</string>
    <string name="updateError">Unable to make the change correctly</string>
    <string name="ToolsConfig">Tools Management</string>
    <string name="ProductsConfig">Products Management</string>
    <string name="showTools">Show Tools</string>
    <string name="showProducts">Show Products</string>
    <string name="createTools">New Tool</string>
    <string name="createProducts">New Product</string>
    <string name="infoTools">Tool Information</string>
    <string name="infoProducts">Product Information</string>
    <string name="descripcion">Description:</string>
    <string name="tamanyo">Size:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msgDeleteTool">Do you want to delete this tool?</string>
    <string name="msgDeleteProduct">Do you want to delete this product?</string>
    <string name="deletedTool">Tool deleted correctly</string>
    <string name="deletedProduct">Product deleted correctly</string>
    <string name="modifyToolOK">Tool modified correctly</string>
    <string name="modifyProductOK">Product modified correctly</string>
     <string name="dosis">Dose:</string>
     <string name="MisParcelas">My Lots</string>
     
    <string name="LotsConfig">Lots Management</string>
    <string name="Lots">Lots</string>
    <string name="showLots">Show Lots</string>
    <string name="createLots">Add Lot</string>
    <string name="msgAviso">You can not edit this lot</string>
    <string name="notEditableLot">You are not the owner of this lot</string>
    <string name="msgAddLots">Do you want to add this lot in your lots list?</string>
    <string name="msgAddLotOK">Lot added correctly</string>
    
    <string name="add">Add</string>
    <string name="view">Show Information</string>
    
    <string name="editLot">Edit Lot</string>
    <string name="deleteLot">Delete Lot</string>
    
    <string name="msgDeleteLot">Do you want to delete this lot from your list?</string>
    
    <string name="deletedLot">Lot deleted correctly</string>
    
    <string name="infoLots">Lot Information</string>
    
    <string name="provincia">Province:</string>
    
    <string name="id">ID:</string>
    <string name="aliasparcela">Alias:</string>
    <string name="poblacion">Town:</string>
    <string name="poligono">Polygon:</string>
    <string name="numero">Number:</string>
    
    <string name="modifiedLotOK">Lot modified correctly</string>
    
    <string name="msgMailPasswordRecovery">OpenGis - Password Recovery</string>
    <string name="msgMailHello">Hello</string>
    <string name="msgMailYourPassword">Your password for all OpenGis applications is: </string>
    
    <string name="newProduct">New Product</string>
    <string name="newTool">New Tool</string>
    <string name="work">Work:</string>
    <string name="addProductOK">Product added correctly</string>
    <string name="addToolOK">Tool added correctly</string>
    
    <string name="selectTool">Select a Tool:</string>
    <string name="selectWork">Select a Work:</string>
    <string name="selectProduct">Select a Product:</string>
    <string name="selectLot">Select a Lot:</string>
    
    <string name="search">Search</string>
    
    <string name="msgInsertDni">Insert correct DNI to search lots</string>
    
    <string name="insertDose">Insert Dose</string>
    
    <string name="youAreIn">You are in:</string>
    
    <string name="lock">Lock Map</string>
    
    <string name="unlock">Unlock Map</string>
    
    <string name="step1">Step 1</string>
    
    <string name="step2">Step 2</string>
    
    <string name="mostrarPerimetro">Show Perimeter</string>
    
    <string name="mensajeAjustarZoom">First adjust the zoom. Then click Show Perimeter</string>
    
    <string name="ajustarParcela">Adjust the perimeter of your lot.Then press Start</string>
    
    <string name="catastroError">The Land Registry is not correctly. You should contact with database administrator</string>

    <string name="change">Change</string>
    
    <string name="confirmationData">Confirmation Data</string>
    
    <string name="finish">Finish Task</string>
    
        
    <string name="distanciaRecorrida">     Distance Traveled:   </string>
    
    <string name="velocidad">        Velocity:  </string>

</resources>