<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >
         <Button
            android:id="@+id/botonAjustar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/rectangle"
            android:text="@string/mostrarPerimetro" />

         <Button
             android:id="@+id/botonEmpezarRecorrido"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:drawableTop="@drawable/play"
             android:text="@string/start" />

         <Button
             android:id="@+id/botonFinalizarTarea"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:drawableTop="@drawable/finish"
             android:text="@string/finish" />
         
        <TextView
            android:id="@+id/textoDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
<com.google.android.maps.MapView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mapview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:apiKey="07LN4yl_pFFIdz3Y4c-1VeGkoNLOjkV7MhiN99g"
/>

</LinearLayout>